add test to check that configured query mix is actually generated